--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -37,6 +37,11 @@ jobs:
           npm run release
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: Build static MD pages
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: "public"
+          destination: "public"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
