--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build static MD pages
         uses: actions/jekyll-build-pages@v1
         with:
-          source: "public"
+          source: "docs"
           destination: "public"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
